--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
